fix: add correct column-gap on main

--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -5,6 +5,9 @@ html, body {
 	background: #F6F6F6;
 }
 
+body {
+	min-width: 1280px;
+}
 .wrapper {
 	width: 1280px;
 	margin: 0 auto;
@@ -96,7 +99,7 @@ nav div a {
 }
 .start_screen_content_content {
 	width: 460px;
-	margin: 185px 0 0px 20px;
+	margin: 185px 0 0px 0px;
 }
 .start_screen_content_image {
 	margin: 60px auto 0 40px;
@@ -161,10 +164,9 @@ nav div a {
 	background: white;
 }
 .about_container {
-	margin-left: 15px;
 	display: flex;
 	justify-content: center;
-	column-gap: 144px;
+	column-gap: 115px;
 	width: 1200px;
 	height: 408px;
 }
@@ -198,7 +200,7 @@ nav div a {
 	font-size: 15px;
 	line-height: 160%;
 	margin-top: 25px;
-	margin-bottom: 30px;
+	margin-bottom: 25px;
 	color: #4C4C4C;
 }
 
